vcs/specs/L2-standard/errors/panic/panic_nested_function.vr
// @test: run-panic
// @level: L2
// @tier: 0
// @tags: errors, panic, nested, call-stack
// @timeout: 5000
// @expected-panic: precondition violated

fn validate(x: Int) {
    if x < 0 {
        panic("precondition violated: x must be non-negative");
    }
}

fn process(x: Int) -> Int {
    validate(x);
    x * 2
}

fn run_pipeline(values: List<Int>) -> List<Int> {
    let mut results: List<Int> = [];
    for v in values {
        results.push(process(v));
    }
    results
}

fn main() {
    let data = [10, 20, -5, 30];
    let results = run_pipeline(data);
    print(f"{results}");
}
